--- a/app/src/main/res/xml/advanced_reminder_settings_root.xml
+++ b/app/src/main/res/xml/advanced_reminder_settings_root.xml
@@ -2,9 +2,9 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <Preference
+        android:icon="@drawable/calendar_check"
         android:title="@string/reminder_status"
-        app:key="reminder_status"
-        android:icon="@drawable/calendar_check"/>
+        app:key="reminder_status" />
     <Preference
         android:title="@string/dosing_instructions"
         app:icon="@drawable/clipboard_plus"
@@ -21,13 +21,21 @@
             android:title="@string/interval"
             app:key="interval" />
         <Preference
-            android:title="Interval type"
-            app:icon="@drawable/calendar2_event"
-            app:key="interval_type" />
+            android:icon="@drawable/align_start"
+            app:key="interval_start_time"
+            app:title="@string/interval_start_time" />
+        <Preference
+            android:icon="@drawable/align_start"
+            app:key="interval_daily_start_time"
+            app:title="@string/daily_start_time" />
+        <Preference
+            android:icon="@drawable/align_end"
+            app:key="interval_daily_end_time"
+            app:title="@string/daily_end_time" />
         <ListPreference
             android:entries="@array/interval_start"
             android:entryValues="@array/values_0_and_1"
-            android:icon="@drawable/align_start"
+            android:icon="@drawable/stopwatch"
             android:title="Interval start"
             app:key="interval_start" />
     </PreferenceCategory>
@@ -39,11 +47,11 @@
             app:key="cyclic_reminder"
             app:title="@string/cycle_reminder" />
         <MultiSelectListPreference
+            android:icon="@drawable/calendar_day"
             app:entries="@array/days"
             app:entryValues="@array/one_to_seven"
             app:key="remind_on_weekdays"
-            app:title="@string/remind_on_weekdays"
-            android:icon="@drawable/calendar_day"/>
+            app:title="@string/remind_on_weekdays" />
         <MultiSelectListPreference
             app:entries="@array/days_of_month"
             app:entryValues="@array/days_of_month"
