--- a/app/src/main/res/xml/advanced_reminder_settings_cyclic.xml
+++ b/app/src/main/res/xml/advanced_reminder_settings_cyclic.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.preference.PreferenceScreen
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-        <Preference
-            app:key="cycle_start_date"
-            app:title="@string/cycle_start_date" />
-        <EditTextPreference
-            app:key="cycle_consecutive_days"
-            app:title="@string/cycle_consecutive_days" />
-        <EditTextPreference
-            app:key="cycle_pause_days"
-            app:title="@string/cycle_pause_days" />
+<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+    <Preference
+        app:key="cycle_start_date"
+        app:title="@string/cycle_start_date" />
+    <EditTextPreference
+        app:key="cycle_consecutive_days"
+        app:title="@string/cycle_consecutive_days" />
+    <EditTextPreference
+        app:key="cycle_pause_days"
+        app:title="@string/cycle_pause_days" />
+    <Preference
+        app:key="summary_only"
+        app:summary="@string/cyclic_reminder_summary" />
 </androidx.preference.PreferenceScreen>
