--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -5,7 +5,7 @@
         android:id="@+id/overviewFragment"
         android:name="com.futsch1.medtimer.overview.OverviewFragment"
         android:contentDescription="@string/overview_tab_description"
-        android:icon="@drawable/calendar2_event"
+        android:icon="@drawable/calendar_event"
         android:title="@string/tab_overview" />
     <item
         android:id="@+id/medicinesFragment"
