--- a/app/src/main/res/layout-land/fragment_overview.xml
+++ b/app/src/main/res/layout-land/fragment_overview.xml
@@ -20,9 +20,8 @@
         android:id="@+id/overviewWeek"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
+        android:layout_marginHorizontal="4dp"
         app:cv_dayViewResource="@layout/calendar_day_layout"
-        app:cv_weekHeaderResource="@layout/calendar_header_layout"
         app:layout_constraintEnd_toStartOf="@id/separator"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,10 +30,11 @@
         android:id="@+id/filterButtons"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="4dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="@id/separator"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/overviewWeek">
 
@@ -79,7 +79,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/separator"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintVertical_bias="0" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
