--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -11,11 +11,11 @@
 
     <com.kizitonwose.calendar.view.WeekCalendarView
         android:id="@+id/overviewWeek"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
+        android:layout_marginHorizontal="4dp"
         app:cv_dayViewResource="@layout/calendar_day_layout"
-        app:cv_weekHeaderResource="@layout/calendar_header_layout"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
