--- a/app/src/main/res/xml/display_settings.xml
+++ b/app/src/main/res/xml/display_settings.xml
@@ -2,21 +2,21 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <SwitchPreferenceCompat
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:defaultValue="false"
         android:title="@string/big_notifications"
         app:key="big_notifications" />
     <SwitchPreferenceCompat
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:defaultValue="false"
         android:summary="@string/use_relative_date_time_summary"
         android:title="@string/use_relative_date_time"
         app:key="use_relative_date_time" />
+    <SwitchPreferenceCompat
+        android:defaultValue="false"
+        android:title="Use system locale for date/time format"
+        app:key="system_locale"
+        app:summary="If switched off, the app uses the locale set for the app."/>
+
     <ListPreference
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:defaultValue="0"
         android:entries="@array/theme_entries_titles"
         android:entryValues="@array/values_0_and_1"
