--- a/app/src/main/res/xml/display_settings.xml
+++ b/app/src/main/res/xml/display_settings.xml
@@ -12,9 +12,9 @@
         app:key="use_relative_date_time" />
     <SwitchPreferenceCompat
         android:defaultValue="false"
-        android:title="Use system locale for date/time format"
+        android:title="@string/system_locale"
         app:key="system_locale"
-        app:summary="If switched off, the app uses the locale set for the app."/>
+        app:summary="@string/system_locale_summary"/>
 
     <ListPreference
         android:defaultValue="0"
