--- a/app/src/main/res/layout/fragment_medicine_stock.xml
+++ b/app/src/main/res/layout/fragment_medicine_stock.xml
@@ -131,6 +131,8 @@
                     android:id="@+id/runOut"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:enabled="false"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:inputType="date"
