--- a/app/src/main/res/xml/repeat_reminders_preferences.xml
+++ b/app/src/main/res/xml/repeat_reminders_preferences.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:key="repeat_reminders"
