Improve display for some menus

--- a/app/src/main/res/xml/advanced_reminder_settings_instructions.xml
+++ b/app/src/main/res/xml/advanced_reminder_settings_instructions.xml
@@ -9,5 +9,6 @@
         android:entryValues="@array/instructions_suggestions"
         android:title="@string/sample_instructions"
         app:icon="@drawable/clipboard_plus"
+        app:singleLineTitle="false"
         app:key="sample_instructions" />
 </androidx.preference.PreferenceScreen>
