Only generate test events on request

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -69,7 +69,13 @@
         <item
             android:id="@+id/generate_test_data"
             android:icon="@drawable/x_circle"
-            android:title="@string/generate_test_data" />
+            android:title="@string/generate_test_data"
+            android:visible="false"/>
+        <item
+            android:id="@+id/generate_test_data_and_events"
+            android:icon="@drawable/x_circle"
+            android:title="@string/generate_test_data_and_events"
+            android:visible="false"/>
         <item
             android:id="@+id/show_app_intro"
             android:title="@string/show_intro" />
