--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -9,7 +9,8 @@
     <TextView
         android:id="@+id/notificationTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:drawablePadding="8dp"
         android:drawableTint="@android:color/holo_red_dark"
         android:text="@string/medicine_name"
@@ -29,7 +30,7 @@
         android:id="@+id/allTakenButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="20dp"
         android:contentDescription="@string/all_taken"
         android:drawableStart="@drawable/check2_all"
         android:text="@string/all_taken"
