Add some elevation to state buttons to make it a bit more obvious that they can be clicked

--- a/app/src/main/res/layout/overview_item.xml
+++ b/app/src/main/res/layout/overview_item.xml
@@ -40,6 +40,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:background="@drawable/shape_round_primary"
+        android:elevation="4dp"
         android:foregroundGravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +54,7 @@
         android:clickable="true"
         android:contentDescription="@string/taken"
         android:cropToPadding="true"
+        android:elevation="8dp"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="@id/buttonBackground"
         app:layout_constraintEnd_toEndOf="@id/buttonBackground"
