--- a/app/src/main/res/layout/circular_menu_overview_event.xml
+++ b/app/src/main/res/layout/circular_menu_overview_event.xml
@@ -73,7 +73,7 @@
         app:layout_constraintTop_toTopOf="@id/anchorSkippedButton" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/reraiseButton"
+        android:id="@+id/reraiseOrScheduleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
