--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
         android:visibility="gone"
         app:cardBackgroundColor="?attr/colorTertiaryContainer"
         app:cardCornerRadius="8dp"
+        app:cardUseCompatPadding="true"
         app:layout_constraintTop_toBottomOf="@id/toolbar">
 
         <LinearLayout
